--- a/test/NetInteractor.Test/NetInteractor.Test.csproj
+++ b/test/NetInteractor.Test/NetInteractor.Test.csproj
@@ -18,6 +18,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Html\*.html" CopyToOutputDirectory="Always" />
-    <None Include="Config\*.config" CopyToOutputDirectory="Always" />
+    <None Include="Scripts\*.config" CopyToOutputDirectory="Always" />
   </ItemGroup>
 </Project>
