--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,8 @@
 <Project>
   <PropertyGroup>    
-    <MSExtensionsVersion>3.0.0</MSExtensionsVersion>
+    <MSExtensionsVersion>6.0.0</MSExtensionsVersion>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+  </ItemGroup>
 </Project>
