--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,8 +1,5 @@
 <Project>
-  <PropertyGroup>    
-    <MSExtensionsVersion>9.0.0</MSExtensionsVersion>
-  </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All" />
   </ItemGroup>
 </Project>
