--- a/test/NetInteractor.Test/NetInteractor.Test.csproj
+++ b/test/NetInteractor.Test/NetInteractor.Test.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.visualstudio" />
@@ -17,5 +18,6 @@
   <ItemGroup>
     <None Include="Html\*.html" CopyToOutputDirectory="Always" />
     <None Include="Scripts\*.config" CopyToOutputDirectory="Always" />
+    <None Include="TestWebApp\Pages\*.html" CopyToOutputDirectory="Always" LinkBase="TestWebApp\Pages" />
   </ItemGroup>
 </Project>
